от Дмитрия Колесникова: к след ответу нужно исправить: - браузер не может почему то прочитать твой шрифт woff2, его совсем можно удалить, но добавить хотя-бы ttf, что-бы покрыть больше браузеров - скрипт нужно подключить перед закрывающим тегом боди - подключение шрифтов и стилей нужно поменять местами ( сначала подключаем шрифты, а ниже файл стилей ) - по семантике у тега section должен быть внутри заголовок, если его нет, значит это не section ;) ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- Корретировки внесены

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>Bali wth you</title>
-   <link rel="stylesheet" href="styles.css">
    <link rel="stylesheet" href="fonts.css">
+   <link rel="stylesheet" href="styles.css">
 </head>
 
 <body class="wrapper">
@@ -30,12 +30,10 @@
       <span class="burger__line burger__line-fourth"></span>
     </label>
 
-  <script src="main.js"></script>
-
   </header>
 
   <main class="main-wrapper">
-    <section class="content">
+    <div class="content">
       <div class="content__info">
         <div class="content__pic">
           <img class="content__img" src="./img/Indonesia.png" alt="Indonesia">
@@ -45,15 +43,18 @@
 
         <button class="content__btn">Book travel</button>
       </div>
-    </section>
-    <section class="images">
+    </div>
+
+    <div class="images">
       <div class="images__wrapper">
         <div class="images__first"><img src="./img/1.png" alt="Pura" class="img1 images__item"></div>
         <div class="images__second"><img src="./img/2.png" alt="Gate" class="img2 images__item"></div>
         <div class="images__third"><img src="./img/3.png" alt="Fields" class="img3 images__item"></div>
       </div>
-    </section>
+    </div>
   </main>
+
+  <script src="main.js"></script>
 
 </body>
 
